# pgn-to-gif

./: .gitignore  README.md  pyproject.toml
examples/arrows-custom-css/: arrows.pgn  svg.css
pgn_to_gif/: cli.py  utils.py
