[tool.poetry]
name        = "pgn_to_gif"
version     = "0.1.0"
description = "Generate GIFs of chess games from PGN files."
license = "MIT"
authors     = [
  "Ahmed Furkan Özkalay <afozk95@gmail.com>",
  "Ricky Grassmuck <rigrassm@gmail.com>"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
keywords = [
  "chess", 
  "gif", 
  "pgn"
]


[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"
chess = "^1.9.0"
cairocffi = "^1.3.0"
CairoSVG = "^2.5.2"
cffi = "^1.15.0"
cssselect2 = "^0.5.0"
defusedxml = "^0.7.1"
numpy = "^1.22.3"
pycparser = "^2.21"
tinycss2 = "^1.1.1"
webencodings = "^0.5.1"
pyperclip = "^1.8.2"
imageio = "^2.16.1"

[tool.poetry.scripts]
pgn2gif = "pgn_to_gif.cli:main"
pgn-to-gif = "pgn_to_gif.cli:main"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
